# AES-and-Square-Attack

./: .gitignore  CMakeLists.txt  README.md  aes.c  aes.h  attack.c  attack.h  gmath.c  gmath.h  main.c  main_attack.c  test_aes.c  test_gmath.c
